Modify maven-surefire-plugin