@@ -241,11 +241,14 @@
 			<plugin>
 		    	<groupId>org.apache.maven.plugins</groupId>
 		    	<artifactId>maven-surefire-plugin</artifactId>
-		    	<version>2.15</version>
+		    	<version>2.22.0</version>
 		    	<configuration>
 		        	<argLine>${surefireArgLine}</argLine>
 		        	<skipTests>${skip.unit.tests}</skipTests>
-		    	</configuration>
+				    <forkCount>3</forkCount>
+    				<reuseForks>true</reuseForks>
+    				<argLine>-Xmx4g -XX:MaxPermSize=256m</argLine>
+  		    	</configuration>
 			</plugin>
 		</plugins>
 	</build>
